# lark-task-bot

./: .gitignore
lark-bot/: Procfile  (+74 more)
tg-automation/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
tg-automation/apps/: __init__.py
tg-automation/apps/api/: __init__.py  main.py
tg-automation/apps/bot/: __init__.py  main.py
tg-automation/apps/worker/: __init__.py  main.py
tg-automation/docs/: api.md  architecture.md  bot-product-boundary.md  testing.md
tg-automation/migrations/: env.py
tg-automation/migrations/versions/: 2ce258d3ad54_initial_domain_schema.py  bf041b6707aa_private_bot_tracking_and_analytics.py  c7e551b5f1e9_nexus_content_sync_and_audit_security.py  d91f4a8c2b73_daily_ist_schedule_profiles.py  e4a7b1c9d205_simplify_first_version.py  f6b2c8d4e901_remove_gift_code_and_simplify_media.py
tg-automation/src/tg_automation/: __init__.py
tg-automation/tests/: conftest.py
tg-automation/tests/integration/: test_analytics_api.py  test_api.py  test_api_auth.py  test_bot_control_api.py  test_migration_compatibility.py  test_operations_api.py  test_schema.py  test_tracking_api.py
tg-automation/tests/unit/: test_analytics_service.py  test_bot_menu.py  test_campaign_service.py  test_config.py  test_content_service.py  test_content_templates.py  test_dashboard_service.py  test_delivery_service.py  test_destination_bootstrap.py  test_destination_service.py  test_media_service.py  test_nexus_integration.py  test_operations_service.py  test_telegram_gateway.py  test_tracking_service.py  test_worker_loop.py
(+64 files in other folders)
